--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,9 @@
       })(window, document, "clarity", "script", "p4a6y8bumj");
     </script>
     <!-- END MICROSOFT CLARITY -->
+    <!--AHREF ANALYTICS-->
+    <script src="https://analytics.ahrefs.com/analytics.js" data-key="SsxjyKP4ZObpy/RaM2bAQQ" async></script>
+    <!--END AHREF ANALYTICS-->
     <link rel="icon" type="image/x-icon" href="balon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
