google adsense add

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <title>Ace Stream Links</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--GOOGLE ADSENSE-->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2054119275406382"
+      crossorigin="anonymous"
+    ></script>
     <!-- MICROSOFT CLARITY -->
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
@@ -22,7 +28,11 @@
     </script>
     <!-- END MICROSOFT CLARITY -->
     <!--AHREF ANALYTICS-->
-    <script src="https://analytics.ahrefs.com/analytics.js" data-key="SsxjyKP4ZObpy/RaM2bAQQ" async></script>
+    <script
+      src="https://analytics.ahrefs.com/analytics.js"
+      data-key="SsxjyKP4ZObpy/RaM2bAQQ"
+      async
+    ></script>
     <!--END AHREF ANALYTICS-->
     <link rel="icon" type="image/x-icon" href="balon.png" />
     <link
@@ -37,9 +47,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
       rel="stylesheet"
     />
-      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
   <body>
     <app-root></app-root>
   </body>
