--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
       async
     ></script>
     <!--END AHREF ANALYTICS-->
-    <link rel="icon" type="image/x-icon" href="balon.png" />
+    <link rel="icon" type="image/x-icon" href="images/balon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
