--- a/src/index.html
+++ b/src/index.html
@@ -49,6 +49,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <!-- Environment variables -->
+    <script src="assets/env.js"></script>
   </head>
   <body>
     <app-root></app-root>
