Agregar verificador de Google en las etiquetas meta

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <meta name="language" content="Spanish" />
     <meta name="revisit-after" content="7 days" />
     <meta name="theme-color" content="#1976d2" />
+
+    <!-- Verificador Google -->
+    <meta name="google-site-verification" content="-gMFbxqc2vOd5dYfpUKHS_R1P7BD01tv0lF3ukGiPGo" />
     
     <!-- Open Graph Meta Tags (Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Markel Links" />
